kubernetes_deployment/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: eks-peerprep
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/authentication-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3004
          resources:
            limits:
              cpu: "200m"
            requests:
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: eks-peerprep
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
