kubernetes_deployment/collaboration-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collaboration-deployment
  namespace: eks-peerprep
  labels:
    app: collaboration-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: collaboration-service
  template:
    metadata:
      labels:
        app: collaboration-service
    spec:
      containers:
        - name: collaboration-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/collaboration-service:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: collaboration-service
  namespace: eks-peerprep
  labels:
    app: collaboration-service
spec:
  selector:
    app: collaboration-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
