kubernetes_deployment/communication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication-deployment
  namespace: eks-peerprep
  labels:
    app: communication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communication-service
  template:
    metadata:
      labels:
        app: communication-service
    spec:
      containers:
        - name: communication-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/communication-service:latest
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: communication-service
  namespace: eks-peerprep
  labels:
    app: communication-service
spec:
  selector:
    app: communication-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
