kubernetes_deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: eks-peerprep
  labels:
    app: frontend-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/frontend:latest
          ports:
            - containerPort: 3005
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: eks-peerprep
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
