kubernetes_deployment/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: eks-peerprep
  labels:
    app: gateway-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-deployment
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/gateway:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "200m"
            requests:
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: eks-peerprep
  labels:
    app: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30500
