kubernetes_deployment/history-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-deployment
  namespace: eks-peerprep
  labels:
    app: history-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: history-service
  template:
    metadata:
      labels:
        app: history-service
    spec:
      containers:
        - name: history-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/history-service:latest
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: history-service
  namespace: eks-peerprep
  labels:
    app: history-service
spec:
  selector:
    app: history-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
