kubernetes_deployment/matching-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-deployment
  namespace: eks-peerprep
  labels:
    app: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
        - name: matching-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/matching-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: matching-service
  namespace: eks-peerprep
  labels:
    app: matching-service
spec:
  selector:
    app: matching-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
