kubernetes_deployment/mongo-history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-history-deployment
  namespace: eks-peerprep
  labels:
    app: mongo-history-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-history-service
  template:
    metadata:
      labels:
        app: mongo-history-service
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
      volumeMounts:
        - mountPath: /data/db
          name: mongodb-history
    volumeMounts:
      - name: mongodb-history
        PersistentVolumeClaim:
          claimName: mongo-history-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-history-service
  namespace: eks-peerprep
  labels:
    app: mongo-history-service
spec:
  selector:
    app: mongo-history-service
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
