kubernetes_deployment/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: eks-peerprep
  labels:
    app: postgres-service
spec:
  replicas: 1 # No replicated database
  selector:
    matchLabels:
      app: postgres-service
  template:
    metadata:
      labels:
        app: postgres-service
    spec:
      containers:
        - name: postgres-container
          image: postgres:latest
          ports:
            - name: restapi
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: eks-peerprep
  labels:
    app: postgres-service
spec:
  selector:
    app: postgres-service
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
