kubernetes_deployment/question-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-deployment
  namespace: eks-peerprep
  labels:
    app: question-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-service
  template:
    metadata:
      labels:
        app: question-service
    spec:
      containers:
        - name: question-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/question-service:latest
          ports:
            - name: restapi
              containerPort: 3001
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: question-service
  namespace: eks-peerprep
  labels:
    app: question-service
spec:
  selector:
    app: question-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
