kubernetes_deployment/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: eks-peerprep
  labels:
    app: rabbitmq-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rabbitmq-service
  template:
    metadata:
      labels:
        app: rabbitmq-service
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12.6-management
          ports:
            - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: eks-peerprep
spec:
  selector:
    app: rabbitmq-service
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
