kubernetes_deployment/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: eks-peerprep
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-container
          image: 920185736846.dkr.ecr.ap-southeast-1.amazonaws.com/user-service:latest
          imagePullPolicy: Always
          ports:
            - name: restapi
              containerPort: 3002
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "200m"
            requests:
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: eks-peerprep
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
